# conversational_ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  cli.py  config.toml  input.txt  install.sh  main.py  pyproject.toml  speak-dialogue.md
.claude/skills/audio-summary/: SKILL.md
.claude/skills/voice-mode/: SKILL.md
skills/cai-dialogue/: SKILL.md
skills/cai-dictation/: SKILL.md
src/: audio.py  config.py  logging_setup.py  middleware.py  models.py  schemas.py
src/cli/: __init__.py  audio_io.py  converse.py  dialogue.py  install_skill.py  listen.py  serve.py  speak.py  transcribe.py  wake_word.py  watch.py
src/routes/: stt.py  system.py  tts.py
tasks/: 04-11-2026-BUGS.md  04-11-2026-TODO.md  ARCHITECTURE.md  BUGS.md  CONTINUITY.md  LESSONS.md  TASK-REFINEMENT.md  TODO.md  feature2_notes.md
tests/: _audio_fakes.py  _cli_fakes.py  dialogue_smoke.sh  test_audio.py  test_cli_audio_io.py  test_cli_context.py  test_cli_subcommands.py  test_config.py  test_dialogue.py  test_integration.py  test_listen.py  test_mic_calibration.py  test_mic_factory.py  test_middleware.py  test_models.py  test_routes.py  test_schemas.py  test_serve.py  test_speak.py  test_transcribe.py  test_wake_word.py  test_watch.py  text_in_speech_in.sh  text_in_speech_out.sh
