[project]
name = "conversational-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "mlx-audio[all]",
    "python-multipart==0.0.20",
    "transformers==5.3.0",
    "uvicorn==0.34.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
]

[tool.uv.sources]
mlx-audio = { path = "../mlx-audio", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
